# acas-toolkit

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
acas_toolkit/: __init__.py  _telemetry.py  control_client.py  data_client.py  egress.py  executor.py  sandbox_factory.py  sandbox_pool.py  session_manager.py  session_store.py  types.py  workspace.py
acas_toolkit/integrations/agent_framework/: __init__.py  execute_code.py  run_pytest.py  run_python.py  run_shell.py
docs/: ACASandboxes.md  README.md  agent-tool-lifecycle.md  observability.md
examples/: 01_minimal.py  02_warm_pool.py  03_egress_policy.py  04_workspace_volume.py  05_session_snapshots.py  06_observability_console.py  07_observability_appinsights.py  08_codeact_agent.py  README.md
infra/: README.md  main.bicep  main.parameters.json  resources.bicep
infra/modules/: foundry.bicep  identity.bicep  monitoring.bicep  sandboxgroup.bicep  storage.bicep
probes/: README.md  sandbox_egress_audit.py  sandbox_introspect.py  sandbox_snapshot_with_volume.py
tests/: test_imports.py
