[project]
name = "acas-toolkit"
version = "0.1.0"
description = "Build agents that run code in Azure Container Apps Sandboxes."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ashu Joshi" }]
requires-python = ">=3.11"
keywords = ["azure", "container-apps", "sandbox", "agent", "codeact"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
# Versions pinned to a known-good combo verified against the June 2026 PyPI
# build of the ACAS SDK.
dependencies = [
    # ACAS data/control-plane SDK. 0.1.0b2 on PyPI (uploaded 2026-06-15)
    # is the current public preview build. We require >=b2 because b2
    # added strict validation on `begin_create_sandbox(snapshot_id=...)`
    # that rejects `egress_policy` and `volumes`; the deferred-apply
    # shim in `acas_toolkit/data_client.py` depends on the b2-only
    # `SandboxClient.set_egress_policy` and `add_volume_mount` setters.
    # The `<0.2` ceiling guards against a future major-shape change.
    # When the SDK graduates to GA the prerelease flag at the bottom
    # of this file can be dropped and the egress audit behaviour
    # re-verified with `probes/sandbox_egress_audit.py`.
    "azure-containerapps-sandbox>=0.1.0b2,<0.2",
    "azure-identity>=1.25.3",
    "azure-monitor-opentelemetry>=1.8.8",
    "httpx>=0.28.1",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Microsoft Agent Framework integration (acas_toolkit.integrations.agent_framework).
# Kept OUT of core so a sandbox-management-only install stays lean and is not
# chained to Agent Framework's (independently-versioned, fast-moving) release
# train. Install with:  pip install "acas-toolkit[agent-framework]"
# Pin note: agent-framework 1.2.x is no longer resolvable on PyPI because a
# transitive dep (agent-framework-orchestrations) now requires
# agent-framework-core>=1.9. The >=1.9 floor below tracks that.
agent-framework = [
    "agent-framework>=1.9,<2",
    "agent-framework-foundry>=1.9,<2",
]
dev = [
    "ruff>=0.4",
    "pytest>=8",
]

[project.urls]
Homepage = "https://github.com/AshuJoshi/acas-toolkit"
Issues   = "https://github.com/AshuJoshi/acas-toolkit/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["acas_toolkit"]

# agent-framework 1.2.2 transitively depends on prerelease-only packages
# (e.g. agent-framework-azure-ai-search==1.0.0b...). Allow them.
# When the ACAS SDK graduates from 0.1.0bN to GA *and* the AF transitive
# deps also stabilize, this flag can be removed.
[tool.uv]
prerelease = "allow"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
# 01_minimal.py performs the late, post-import-time assertions that
# prove `acas_toolkit` is zero-cost (no eager OTel exporter, no
# `agentic_platforms.af` pulled in). The late imports that follow
# those assertions are intentional — they can't run at the top of
# the file or the assertions would lose their meaning.
"examples/01_minimal.py" = ["E402"]
